# RetailARVA

./: .dockerignore  .gitignore  LICENSE  README.md  api.Dockerfile  docker-compose-w-ollama.yaml  docker-compose.dev.yaml  docker-compose.yaml  product_descriptions.json  run-ollama.sh  server-setup.txt  setup-server.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Modelfile  README.md  pyproject.toml  requirements.txt  run.py
backend/src/: app.py  enums.py  main.py  routes.py  templates.py  ui.py
backend/src/configs/: config.py  database.py  settings.py
backend/src/data/: product_descriptions.json  products.csv  products.json
backend/src/database/: db.db
backend/src/entitites/: product_review.py
backend/src/exceptions/: exceptions.py
backend/src/helpers/: api_helpers.py  db.py  formatting.py  import_json_to_mongo.py
backend/src/models/: entities.py  message_model.py  models.py  product_model.py
backend/src/repositories/: chat_repository.py  message_repository.py  product_repository.py
backend/src/utils/: benchmark.py  chains.py  chatbot.py  database.py  elevenlabs_tts.py  gemini_chat.py  google_tts.py  parsers.py  prompts.py  rag_helper.py  rag_pipeline.py  stt.py  vector_db.py
client-web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
finetune/: .gitignore  dataset.json  dataset_info.json  finetuning_dataset.json  finetuning_dataset_gpt4.jsonl  product_descriptions.json  products.csv
notebooks/: RAG_pipeline.ipynb  dataset_v3.csv  numbered_dataset_v3.csv  preprocess_dataset.ipynb  products_v4.json  rag_eval_dataset_source_gen.ipynb  (+2 more)
(+47 files in other folders)
