[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Dinith Kumudika",email = "dinithwalpitagama@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "4.12.3"
colorama = "0.4.6"
Flask = "3.0.3"
google-generativeai = "0.7.2"
gradio = "4.39.0"
huggingface-hub = "0.24.1"
idna = "2.10"
requests = ">=2.26.0"
Jinja2 = "3.1.4"
langchain = "0.2.15"
langchain-community = "0.2.14"
langchain-core = "0.2.36"
langchain-google-genai = "1.0.7"
langchain-google-vertexai = "1.0.6"
langchain-groq = "0.1.9"
langchain-ollama = "0.1.1"
langchain-qdrant = "0.1.2"
langchain-text-splitters = "0.2.2"
langchainhub = "0.1.20"
langsmith = "0.1.142"
markdownify = "0.14.1"
MarkupSafe = "2.1.5"
marshmallow = "3.22.0"
matplotlib = "3.8.4"
numpy = "1.26.4"
ollama = "0.3.1"
pandas = "2.2.2"
pillow = "10.4.0"
protobuf = "4.25.5"
PyAudio = "0.2.14"
pydantic = "2.8.2"
pydantic-settings = "2.3.4"
pydantic-core = "2.20.1"
pymongo = "4.11"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
qdrant-client = "1.10.1"
safetensors = "0.4.5"
scikit-learn = "1.5.2"
scipy = "1.14.1"
semantic-version = "2.10.0"
sentence-transformers = "3.3.1"
SpeechRecognition = "3.10.4"
SQLAlchemy = "2.0.31"
tokenizers = "0.20.3"
tomlkit = "0.12.0"
torch = "2.5.1"
tqdm = "4.66.4"
transformers = "4.46.3"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
